[Fix] Notes in markdown allow dark mode

--- a/project-static/squest/css/squest-dark.css
+++ b/project-static/squest/css/squest-dark.css
@@ -3,15 +3,23 @@
     background-color: #343a40 !important;
     color: #fff !important;
 }
+
 .bg-dark table tr {
     background-color: #343a40 !important;
     color: #fff !important;
 }
 
+.bg-dark blockquote {
+    background-color: #343a40 !important;
+    color: #fff !important;
+}
+
+
 .dtfc-fixed-left {
     background-color: #343a40 !important;
     z-index: 1;
 }
+
 input.form-control[disabled] {
     opacity: 0.4;
 }
